Update on design

--- a/app/src/main/res/layout/fragment_actualizar_libro.xml
+++ b/app/src/main/res/layout/fragment_actualizar_libro.xml
@@ -7,13 +7,17 @@
     tools:context=".fragments.actualizar.ActualizarLibro"
     android:background="?attr/backgroundColor">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="60dp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="20dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_rawRes="@raw/chargebook"/>
 
     <EditText
         android:id="@+id/txtNombre"
