--- a/app/src/main/res/layout/fragment_actualizar_prestamo.xml
+++ b/app/src/main/res/layout/fragment_actualizar_prestamo.xml
@@ -7,6 +7,17 @@
     tools:context=".fragments.actualizar.ActualizarPrestamoFragment"
     android:background="?attr/backgroundColor">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="20dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_rawRes="@raw/personread"/>
 
     <Spinner
         android:id="@+id/spEstudiante"
