--- a/app/src/main/res/layout/fragment_addlibro.xml
+++ b/app/src/main/res/layout/fragment_addlibro.xml
@@ -8,14 +8,17 @@
     tools:context=".fragments.agregar.FragmentAddlibro"
     android:background="?attr/backgroundColor">
 
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="20dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_rawRes="@raw/chargebook"/>
 
 
     <EditText
@@ -83,12 +86,12 @@
 
     <Button
         android:id="@+id/BtnUpdate"
-        android:layout_width="202dp"
-        android:layout_height="109dp"
-        android:layout_marginTop="560dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="Actualizar en linea"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="90dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginTop="510dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
