--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="colorSecondary">#5870d4</item>
         <item name="colorSecondaryVariant">#f3a234</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="cardBackgroundColor">@color/white</item>
         <item name="backgroundColor">@color/WhiteCream</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
